Change correct answer letter from 'B' to 'A'
11/6 283題

--- a/daily_answers_apply.json
+++ b/daily_answers_apply.json
@@ -4809,7 +4809,7 @@
             "大量重複同義詞增加隨機性"
         ],
         "correct_answer_index": 1,
-        "correct_answer_letter": "B",
+        "correct_answer_letter": "A",
         "topic": "生成式AI應用與規劃",
         "subtopic": "提示工程",
         "concept": "情境式指令設計",
